--- a/hsm_portal_medico/paciente.htm
+++ b/hsm_portal_medico/paciente.htm
@@ -16,6 +16,7 @@
                     <v-flex d-flex>
                         <v-card color="indigo" dark>
                             <v-btn color="success" @click="gravar()">Success</v-btn>
+                            <v-btn color="success" @click="gravarx()">Successx</v-btn>
                         </v-card>
                     </v-flex>
                 </v-layout>
