--- a/hsm_portal_medico/paciente.htm
+++ b/hsm_portal_medico/paciente.htm
@@ -11,110 +11,148 @@
 <body>
     <div id="app" style="padding: 0px 20px 0px 20px">
         <v-app id="inspire">
-            <v-container fluid grid-list-md>
-                <v-layout row wrap>
-                    <v-flex d-flex>
-                        <v-card color="indigo" dark>
-                            <v-btn color="success" @click="gravar()">Success</v-btn>
-                            <v-btn color="success" @click="gravarx()">Successx</v-btn>
-                        </v-card>
-                    </v-flex>
-                </v-layout>
+            <form id="form-paciente" name="formpaciente">
+                <v-container fluid grid-list-md>
+                    <h1 class="display-1">Paciente</h1>
+                    <v-layout row wrap>
+                        <v-flex d-flex>
+                            <v-card color="indigo" dark>
+                                <v-btn color="success" @click="gravar()">Avançar</v-btn>
+                                <v-btn color="primary" onclick="location.href = 'Default.aspx'">Inicio</v-btn>
+                            </v-card>
+                        </v-flex>
+                    </v-layout>
 
-                <v-layout row wrap>
-                    <v-flex d-flex xs12 sm3 md2>
-                        <v-text-field mask="###.###.###-##" v-model="cpf" label="CPF" required @change="BuscarCPF()"></v-text-field>
-                    </v-flex>
-                    <v-flex d-flex xs12 sm6 md8>
-                        <v-text-field v-model="nome" label="Nome" required></v-text-field>
-                    </v-flex>
-                    <v-flex d-flex xs12 sm3 md2>
-                        <v-menu ref="menu_nascimento" v-model="menu_nascimento" :nudge-right="40" :close-on-content-click="false" lazy transition="scale-transition"
-                            offset-y full-width min-width="290px">
-                            <v-text-field slot="activator" v-model="nascimento_Formatted" label="Nascimento" prepend-icon="event"></v-text-field>
-                            <v-date-picker locale="pt-br" v-model="nascimento" @input="menu_nascimento = false"></v-date-picker>
-                        </v-menu>
-                    </v-flex>
-                </v-layout>
-                <v-layout row wrap>
-                    <v-flex d-flex xs12 sm4 md3>
-                        <v-radio-group label="Sexo" v-model="sexo" row>
-                            <v-radio label="Masculino" value="M"></v-radio>
-                            <v-radio label="Feminino" value="F"></v-radio>
-                        </v-radio-group>
-                    </v-flex>
-                    <v-flex d-flex xs12 sm6 md2>
-                        <v-text-field v-model="rg" label="RG" required></v-text-field>
-                    </v-flex>
-                    <v-flex d-flex xs12 sm6 md3>
-                        <v-select :items="estadocivil_items" v-model="estadocivil" label="Estado Civil" return-object></v-select>
-                    </v-flex>
-                    <v-flex d-flex xs12 sm6 md4>
-                        <v-select :items="profissao_items" v-model="profissao" label="Profissão" return-object></v-select>
-                    </v-flex>
-                </v-layout>
-                <v-layout row wrap>
-                    <v-flex d-flex xs12 sm6 md6>
-                        <v-text-field v-model="pai" label="Nome do Pai" required></v-text-field>
-                    </v-flex>
-                    <v-flex d-flex xs12 sm6 md6>
-                        <v-text-field v-model="mae" label="Nome da Mãe" required></v-text-field>
-                    </v-flex>
-                </v-layout>
-                <v-layout row wrap>
-                    <v-flex d-flex xs12 sm6 md6>
-                        <v-select :items="convenio_items" v-model="convenio" label="Convênio" return-object></v-select>
-                    </v-flex>
-                    <v-flex d-flex xs12 sm6 md6>
-                        <v-text-field v-model="plano" label="Plano" required></v-text-field>
-                    </v-flex>
-                </v-layout>
-                <v-layout row wrap>
-                    <v-flex d-flex xs12 sm4 md4>
-                        <v-text-field v-model="carteirinha" label="Nº Carteirinha" required></v-text-field>
-                    </v-flex>
-                    <v-flex d-flex xs12 sm4 md4>
-                        <v-menu ref="menu_validade_cart" v-model="menu_validade_cart" :nudge-right="40" :close-on-content-click="false" lazy transition="scale-transition"
-                            offset-y full-width min-width="290px">
-                            <v-text-field slot="activator" v-model="validade_cart_Formatted" label="Validade Carteirinha" prepend-icon="event"></v-text-field>
-                            <v-date-picker locale="pt-br" v-model="validade_cart" @input="menu_validade_cart = false"></v-date-picker>
-                        </v-menu>
-                    </v-flex>
-                    <v-flex d-flex xs12 sm4 md4>
-                        <v-text-field v-model="titular" label="Titular" required></v-text-field>
-                    </v-flex>
-                </v-layout>
-                <v-layout row wrap>
-                    <v-flex d-flex xs12 sm2 md2>
-                        <v-text-field mask="##.###-###" v-model="cep" label="CEP" required @change="BuscarCEP()"></v-text-field>
-                    </v-flex>
-                    <v-flex d-flex xs12 sm4 md4>
-                        <v-text-field v-model="cidade" label="Cidade" required></v-text-field>
-                    </v-flex>
-                    <v-flex d-flex xs12 sm2 md2>
-                        <v-text-field v-model="uf" label="UF" required></v-text-field>
-                    </v-flex>
-                    <v-flex d-flex xs12 sm4 md4>
-                        <v-select :items="bairro_items" v-model="bairro" label="Bairro" return-object></v-select>
-                    </v-flex>
-                </v-layout>
-                <v-layout row wrap>
-                    <v-flex d-flex xs12 sm3 md3>
-                        <v-text-field v-model="contato" label="Contato" required></v-text-field>
-                    </v-flex>
-                    <v-flex d-flex xs12 sm3 md3>
-                        <v-text-field mask="(##) #####-####" v-model="celular" label="Celular" required></v-text-field>
-                    </v-flex>
-                    <v-flex d-flex xs12 sm3 md3>
-                        <v-text-field mask="(##) ####-####" v-model="telefone" label="Telefone" required></v-text-field>
-                    </v-flex>
-                    <v-flex d-flex xs12 sm3 md3>
-                        <v-text-field v-model="email" label="E-mail" required :rules="[rules.email]"></v-text-field>
-                    </v-flex>
-                </v-layout>
-            </v-container>
+                    <v-layout row wrap>
+                        <v-flex d-flex xs12 sm3 md2>
+                            <v-text-field mask="###.###.###-##" v-model="cpf" label="CPF" required @change="BuscarCPF()"></v-text-field>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm6 md8>
+                            <v-text-field v-model="nome" label="Nome" required></v-text-field>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm3 md2>
+                            <v-menu ref="menu_nascimento" v-model="menu_nascimento" :nudge-right="40"
+                                :close-on-content-click="false" lazy transition="scale-transition" offset-y full-width
+                                min-width="290px">
+                                <v-text-field slot="activator" v-model="nascimento_Formatted" label="Nascimento"
+                                    prepend-icon="event"></v-text-field>
+                                <v-date-picker locale="pt-br" v-model="nascimento" @input="menu_nascimento = false"></v-date-picker>
+                            </v-menu>
+                        </v-flex>
+                    </v-layout>
+                    <v-layout row wrap>
+                        <v-flex d-flex xs12 sm4 md3>
+                            <v-radio-group label="Sexo" v-model="sexo" row>
+                                <v-radio label="Masculino" value="M"></v-radio>
+                                <v-radio label="Feminino" value="F"></v-radio>
+                            </v-radio-group>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm6 md2>
+                            <v-text-field v-model="rg" label="RG" required></v-text-field>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm6 md3>
+                            <v-select :items="estadocivil_items" v-model="estadocivil" label="Estado Civil"
+                                return-object></v-select>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm6 md4>
+                            <v-select :items="profissao_items" v-model="profissao" label="Profissão" return-object></v-select>
+                        </v-flex>
+                    </v-layout>
+                    <v-layout row wrap>
+                        <v-flex d-flex xs12 sm6 md6>
+                            <v-text-field v-model="pai" label="Nome do Pai" required></v-text-field>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm6 md6>
+                            <v-text-field v-model="mae" label="Nome da Mãe" required></v-text-field>
+                        </v-flex>
+                    </v-layout>
+                    <v-layout row wrap>
+                        <v-flex d-flex xs12 sm6 md6>
+                            <v-select :items="convenio_items" v-model="convenio" label="Convênio" return-object></v-select>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm6 md6>
+                            <v-text-field v-model="plano" label="Plano" required></v-text-field>
+                        </v-flex>
+                    </v-layout>
+                    <v-layout row wrap>
+                        <v-flex d-flex xs12 sm4 md4>
+                            <v-text-field v-model="carteirinha" label="Nº Carteirinha" required></v-text-field>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm4 md4>
+                            <v-menu ref="menu_validade_cart" v-model="menu_validade_cart" :nudge-right="40"
+                                :close-on-content-click="false" lazy transition="scale-transition" offset-y full-width
+                                min-width="290px">
+                                <v-text-field slot="activator" v-model="validade_cart_Formatted" label="Validade Carteirinha"
+                                    prepend-icon="event"></v-text-field>
+                                <v-date-picker locale="pt-br" v-model="validade_cart" @input="menu_validade_cart = false"></v-date-picker>
+                            </v-menu>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm4 md4>
+                            <v-text-field v-model="titular" label="Titular" required></v-text-field>
+                        </v-flex>
+                    </v-layout>
+                    <v-layout row wrap>
+                        <v-flex d-flex xs12 sm2 md2>
+                            <v-text-field mask="##.###-###" v-model="cep" label="CEP" required @change="BuscarCEP()"></v-text-field>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm4 md4>
+                            <v-text-field v-model="cidade" label="Cidade" required></v-text-field>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm2 md2>
+                            <v-text-field v-model="uf" label="UF" required></v-text-field>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm4 md4>
+                            <v-select :items="bairro_items" v-model="bairro" label="Bairro" return-object></v-select>
+                        </v-flex>
+                    </v-layout>
+                    <v-layout row wrap>
+                        <v-flex d-flex xs12 sm3 md3>
+                            <v-text-field v-model="contato" label="Contato" required></v-text-field>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm3 md3>
+                            <v-text-field mask="(##) #####-####" v-model="celular" label="Celular" required></v-text-field>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm3 md3>
+                            <v-text-field mask="(##) ####-####" v-model="telefone" label="Telefone" required></v-text-field>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm3 md3>
+                            <v-text-field v-model="email" label="E-mail" required :rules="[rules.email]"></v-text-field>
+                        </v-flex>
+                    </v-layout>
+                    <v-layout row wrap>
+                        <v-flex d-flex>
+                            <v-card color="indigo" dark>
+                                <v-btn color="success" @click="gravar()">Avançar</v-btn>
+                                <v-btn color="primary" onclick="location.href = 'Default.aspx'">Inicio</v-btn>
+                            </v-card>
+                        </v-flex>
+                    </v-layout>
+                </v-container>
+                <v-dialog v-model="dialog" width="500">
+                    <v-card>
+                        <v-card-title class="headline grey lighten-2" primary-title>
+                            Atençao
+                        </v-card-title>
+
+                        <v-card-text>
+                            Informe um CPF para o paciennte
+                        </v-card-text>
+
+                        <v-divider></v-divider>
+
+                        <v-card-actions>
+                            <v-spacer></v-spacer>
+                            <v-btn color="primary" flat @click="dialog = false">
+                                Ok
+                            </v-btn>
+                        </v-card-actions>
+                    </v-card>
+                </v-dialog>
+            </form>
         </v-app>
     </div>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>    
     <script src='https://unpkg.com/babel-polyfill/dist/polyfill.min.js'></script>
     <script src='https://unpkg.com/vue/dist/vue.js'></script>
     <script src='https://unpkg.com/vuetify@1.0.19/dist/vuetify.min.js'></script>
