--- a/hsm_portal_medico/cirurgia.htm
+++ b/hsm_portal_medico/cirurgia.htm
@@ -23,14 +23,14 @@
                         </v-flex>
                         <v-flex d-flex xs12 sm6 md3>
                             <v-menu ref="menu_data_autoriza" v-model="menu_data_autoriza" :nudge-right="40" :close-on-content-click="false" lazy transition="scale-transition"
-                                offset-y full-width min-width="290px">
+                                    offset-y full-width min-width="290px">
                                 <v-text-field :rules="[rules.required]" required slot="activator" v-model="data_autoriza_Formatted" label="Data Autorização" prepend-icon="event"></v-text-field>
                                 <v-date-picker :rules="[rules.required]" required locale="pt-br" v-model="data_autoriza" @input="menu_data_autoriza = false"></v-date-picker>
                             </v-menu>
                         </v-flex>
                         <v-flex d-flex xs12 sm6 md3>
                             <v-menu ref="menu_valid_autoriza" v-model="menu_valid_autoriza" :nudge-right="40" :close-on-content-click="false" lazy transition="scale-transition"
-                                offset-y full-width min-width="290px">
+                                    offset-y full-width min-width="290px">
                                 <v-text-field :rules="[rules.required]" required slot="activator" v-model="valid_autoriza_Formatted" label="Validade Autorização" prepend-icon="event"></v-text-field>
                                 <v-date-picker locale="pt-br" v-model="valid_autoriza" @input="menu_valid_autoriza = false"></v-date-picker>
                             </v-menu>
@@ -50,7 +50,7 @@
                     <v-layout row wrap>
                         <v-flex d-flex xs12 sm12 md12>
                             <v-select :loading="loading" :items="items" :search-input.sync="search" v-model="procedimento" label="Procedimento Cirurgico"
-                                autocomplete return-object></v-select>
+                                      autocomplete return-object></v-select>
                             <v-btn flat icon color="primary" @click="addItem()">
                                 <v-icon>check_circle</v-icon>
                             </v-btn>
@@ -68,14 +68,24 @@
                             </td>
                         </template>
                     </v-data-table>
+
+                    <v-layout row wrap v-if="opcao_reserva">
+                        <v-flex d-flex>
+                            <v-radio-group label="Horário" v-model="reserva" row>
+                                <v-radio label="Só  Reservados" value="1"></v-radio>
+                                <v-radio label="Todos" value="0"></v-radio>
+                            </v-radio-group>
+                        </v-flex>
+                    </v-layout>
+
                     <v-layout row wrap>
                         <v-flex d-flex>
                             <v-card color="indigo" dark>
-                                <v-btn id="btn-buscar" color="success" onclick="this.setAttribute('disabled', true);" @click="getAgendas()">Buscar agendas disponiveis</v-btn>
+                                <v-btn id="btn-buscar" color="success" @click="getAgendas()">Buscar agendas disponiveis</v-btn>
                                 <v-btn color="primary" onclick="location.href = 'Default.aspx'">Inicio</v-btn>
                             </v-card>
-                        </v-flex>                  
-                    </v-layout>   
+                        </v-flex>
+                    </v-layout>
                     <v-data-table :headers="headers_agenda" :items="agendas" hide-actions>
                         <template slot="items" slot-scope="props">
                             <td>{{ props.item.HoraIniF }}</td>
@@ -85,11 +95,12 @@
                                 </v-btn>
                             </td>
                         </template>
-                    </v-data-table>                             
+                    </v-data-table>
                 </v-container>
             </v-app>
         </v-form>
     </div>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src='https://unpkg.com/babel-polyfill/dist/polyfill.min.js'></script>
     <script src='https://unpkg.com/vue/dist/vue.js'></script>
     <script src='https://unpkg.com/vuetify@1.0.19/dist/vuetify.min.js'></script>
