--- a/hsm_portal_medico/paciente.htm
+++ b/hsm_portal_medico/paciente.htm
@@ -34,7 +34,7 @@
                             <v-menu ref="menu_nascimento" v-model="menu_nascimento" :nudge-right="40"
                                 :close-on-content-click="false" lazy transition="scale-transition" offset-y full-width
                                 min-width="290px">
-                                <v-text-field slot="activator" v-model="nascimento_Formatted" label="Nascimento"
+                                <v-text-field slot="activator" v-model="nascimento_Formatted" label="Nascimento" :rules="[rules.required]" required
                                     prepend-icon="event"></v-text-field>
                                 <v-date-picker locale="pt-br" v-model="nascimento" @input="menu_nascimento = false"></v-date-picker>
                             </v-menu>
@@ -42,7 +42,7 @@
                     </v-layout>
                     <v-layout row wrap>
                         <v-flex d-flex xs12 sm4 md3>
-                            <v-radio-group label="Sexo" v-model="sexo" row>
+                            <v-radio-group label="Sexo" v-model="sexo" row :rules="[rules.required]" required>
                                 <v-radio label="Masculino" value="M"></v-radio>
                                 <v-radio label="Feminino" value="F"></v-radio>
                             </v-radio-group>
@@ -60,23 +60,23 @@
                     </v-layout>
                     <v-layout row wrap>
                         <v-flex d-flex xs12 sm6 md6>
-                            <v-text-field v-model="pai" label="Nome do Pai" :rules="[rules.required]" required></v-text-field>
+                            <v-text-field v-model="pai" label="Nome do Pai"></v-text-field>
                         </v-flex>
                         <v-flex d-flex xs12 sm6 md6>
-                            <v-text-field v-model="mae" label="Nome da Mãe" :rules="[rules.required]" required></v-text-field>
+                            <v-text-field v-model="mae" label="Nome da Mãe"></v-text-field>
                         </v-flex>
                     </v-layout>
                     <v-layout row wrap>
                         <v-flex d-flex xs12 sm6 md6>
-                            <v-select :items="convenio_items" v-model="convenio" label="Convênio" return-object></v-select>
+                            <v-select :items="convenio_items" v-model="convenio" label="Convênio" return-object :rules="[rules.required]" required></v-select>
                         </v-flex>
                         <v-flex d-flex xs12 sm6 md6>
-                            <v-text-field v-model="plano" label="Plano" :rules="[rules.required]" required></v-text-field>
+                            <v-text-field v-model="plano" label="Plano"></v-text-field>
                         </v-flex>
                     </v-layout>
                     <v-layout row wrap>
                         <v-flex d-flex xs12 sm4 md4>
-                            <v-text-field v-model="carteirinha" label="Nº Carteirinha" :rules="[rules.required]" required></v-text-field>
+                            <v-text-field v-model="carteirinha" label="Nº Carteirinha"></v-text-field>
                         </v-flex>
                         <v-flex d-flex xs12 sm4 md4>
                             <v-menu ref="menu_validade_cart" v-model="menu_validade_cart" :nudge-right="40"
@@ -88,7 +88,7 @@
                             </v-menu>
                         </v-flex>
                         <v-flex d-flex xs12 sm4 md4>
-                            <v-text-field v-model="titular" label="Titular" :rules="[rules.required]" required></v-text-field>
+                            <v-text-field v-model="titular" label="Titular"></v-text-field>
                         </v-flex>
                     </v-layout>
                     <v-layout row wrap>
@@ -107,10 +107,10 @@
                     </v-layout>
                     <v-layout row wrap>
                         <v-flex d-flex xs12 sm3 md3>
-                            <v-text-field v-model="contato" label="Contato"></v-text-field>
+                            <v-text-field v-model="contato" label="Contato" :rules="[rules.required]" required></v-text-field>
                         </v-flex>
                         <v-flex d-flex xs12 sm3 md3>
-                            <v-text-field mask="(##) #####-####" v-model="celular" label="Celular"></v-text-field>
+                            <v-text-field mask="(##) #####-####" v-model="celular" label="Celular" :rules="[rules.required]" required></v-text-field>
                         </v-flex>
                         <v-flex d-flex xs12 sm3 md3>
                             <v-text-field mask="(##) ####-####" v-model="telefone" label="Telefone"></v-text-field>
@@ -152,7 +152,6 @@
         </v-app>
     </div>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>    
     <script src='https://unpkg.com/babel-polyfill/dist/polyfill.min.js'></script>
     <script src='https://unpkg.com/vue/dist/vue.js'></script>
     <script src='https://unpkg.com/vuetify@1.0.19/dist/vuetify.min.js'></script>
