--- a/hsm_portal_medico/paciente.htm
+++ b/hsm_portal_medico/paciente.htm
@@ -25,7 +25,7 @@
 
                     <v-layout row wrap>
                         <v-flex d-flex xs12 sm3 md2>
-                            <v-text-field mask="###.###.###-##" v-model="cpf" label="CPF" :rules="[rules.required]" required @change="BuscarCPF()"></v-text-field>
+                            <v-text-field mask="###.###.###-##" v-model="cpf" label="CPF" :rules="[rules.cpf]" required @change="BuscarCPF()"></v-text-field>
                         </v-flex>
                         <v-flex d-flex xs12 sm6 md8>
                             <v-text-field v-model="nome" label="Nome" :rules="[rules.required]" required></v-text-field>
@@ -34,8 +34,8 @@
                             <v-menu ref="menu_nascimento" v-model="menu_nascimento" :nudge-right="40"
                                 :close-on-content-click="false" lazy transition="scale-transition" offset-y full-width
                                 min-width="290px">
-                                <v-text-field slot="activator" v-model="nascimento_Formatted" label="Nascimento" :rules="[rules.required]" required
-                                    prepend-icon="event"></v-text-field>
+                                <v-text-field mask="##/##/####" slot="activator" v-model="nascimento_Formatted" label="Nascimento" :rules="[rules.required]" required
+                                    prepend-icon="event" @blur="nascimento = parseDate(nascimento_Formatted)"></v-text-field>
                                 <v-date-picker locale="pt-br" v-model="nascimento" @input="menu_nascimento = false"></v-date-picker>
                             </v-menu>
                         </v-flex>
