--- a/hsm_portal_medico/paciente.htm
+++ b/hsm_portal_medico/paciente.htm
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Paciente - HSM Portal Medico</title>
     <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons'>
-    <link rel='stylesheet prefetch' href='https://unpkg.com/vuetify@1.0.19/dist/vuetify.min.css'>
+    <link rel='stylesheet prefetch' href='https://unpkg.com/vuetify@1.3.1/dist/vuetify.min.css'>
 </head>
 
 <body>
@@ -52,10 +52,10 @@
                         </v-flex>
                         <v-flex d-flex xs12 sm6 md3>
                             <v-select :items="estadocivil_items" v-model="estadocivil" label="Estado Civil"
-                                return-object></v-select>
+                                return-value></v-select>
                         </v-flex>
                         <v-flex d-flex xs12 sm6 md4>
-                            <v-select :items="profissao_items" v-model="profissao" label="Profissão" return-value></v-select>
+                            <v-combobox :items="profissao_items" v-model="profissao" label="Profissão"></v-combobox>
                         </v-flex>
                     </v-layout>
                     <v-layout row wrap>
@@ -82,8 +82,8 @@
                             <v-menu ref="menu_validade_cart" v-model="menu_validade_cart" :nudge-right="40"
                                 :close-on-content-click="false" lazy transition="scale-transition" offset-y full-width
                                 min-width="290px">
-                                <v-text-field slot="activator" v-model="validade_cart_Formatted" label="Validade Carteirinha"
-                                    prepend-icon="event"></v-text-field>
+                                <v-text-field mask="##/##/####" slot="activator" v-model="validade_cart_Formatted" label="Validade Carteirinha"
+                                    prepend-icon="event" @blur="validade_cart = parseDate(validade_cart_Formatted)"></v-text-field>
                                 <v-date-picker locale="pt-br" v-model="validade_cart" @input="menu_validade_cart = false"></v-date-picker>
                             </v-menu>
                         </v-flex>
@@ -102,7 +102,7 @@
                             <v-text-field v-model="uf" label="UF" :rules="[rules.required]" required></v-text-field>
                         </v-flex>
                         <v-flex d-flex xs12 sm4 md4>
-                            <v-select :items="bairro_items" v-model="bairro" label="Bairro" return-value></v-select>
+                            <v-combobox :items="bairro_items" v-model="bairro" label="Bairro"></v-combobox>
                         </v-flex>
                     </v-layout>
                     <v-layout row wrap>
@@ -154,7 +154,7 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>    
     <script src='https://unpkg.com/babel-polyfill/dist/polyfill.min.js'></script>
     <script src='https://unpkg.com/vue/dist/vue.js'></script>
-    <script src='https://unpkg.com/vuetify@1.0.19/dist/vuetify.min.js'></script>
+    <script src='https://unpkg.com/vuetify@1.3.1/dist/vuetify.min.js'></script>
     <script src='https://unpkg.com/vue-resource@1.5.1/dist/vue-resource.min.js'></script>
     <script src='js/paciente.js'></script>
 </body>
